consertei uns erros nas configurações antigas dos assets padrão do expo pros do Inventorinho e tirei configurações desnecessarias de arquivos já fora do projeto a muito tempo

--- a/app.json
+++ b/app.json
@@ -4,26 +4,24 @@
     "slug": "inventorinho",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./inventorinho.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
-    "splash": {
-      "image": "./assets/splash-icon.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./inventory.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.marimori.inventorinho"
     },
-    "web": {
-      "favicon": "./assets/favicon.png"
+    "extra": {
+      "eas": {
+        "projectId": "8ab303d0-914b-4184-bbcd-4b48127d3cc3"
+      }
     }
   }
 }
